[gd_scene load_steps=13 format=3 uid="uid://brcmthhoohsbe"]

[ext_resource type="Script" path="res://entities/projectiles/delayed_aoe.gd" id="1_eqgal"]
[ext_resource type="Texture2D" uid="uid://b20w5dnll1xsg" path="res://temporary_assets/blue_circle.png" id="2_1fkwf"]
[ext_resource type="Texture2D" uid="uid://ckfc87v4rfkeg" path="res://temporary_assets/red_circle.png" id="3_nicmw"]
[ext_resource type="Texture2D" uid="uid://cwihixqqodq3y" path="res://SPRITES/Animations/Explosion.png" id="4_7o6xc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c5b8v"]
radius = 427.617

[sub_resource type="AtlasTexture" id="AtlasTexture_dt4k1"]
atlas = ExtResource("4_7o6xc")
region = Rect2(0, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lh8t"]
atlas = ExtResource("4_7o6xc")
region = Rect2(256, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_kffgf"]
atlas = ExtResource("4_7o6xc")
region = Rect2(0, 144, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd0m3"]
atlas = ExtResource("4_7o6xc")
region = Rect2(256, 144, 256, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_psd8b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt4k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lh8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kffgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kffgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd0m3")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"explosion",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_wruq7"]
resource_name = "explode"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_RedCircle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"explode"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_estrb"]
_data = {
"explode": SubResource("Animation_wruq7")
}

[node name="delayed_aoe" type="Area2D"]
scale = Vector2(0.1, 0.1)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_eqgal")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c5b8v")

[node name="Sprite2D_BlueCircle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.741176)
position = Vector2(-2, -2)
texture = ExtResource("2_1fkwf")

[node name="Sprite2D_RedCircle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.466667)
position = Vector2(-2, -2)
texture = ExtResource("3_nicmw")

[node name="AnimatedSprite2D_Explosion" type="AnimatedSprite2D" parent="."]
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_psd8b")
animation = &"explosion"
frame = 6
frame_progress = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_estrb")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
